[package]
name = "opendal-mount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
anyhow = "1.0.71"

log = "0.4.18"
pretty_env_logger = "0.5.0"


opendal = { version = "0.38.0", features = ["services-sftp"] }
nfsserve = "0.10.1"

bimap = "0.6.3"

futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
    "time",
    "sync",
] }

tokio-console = { version = "0.1.8", optional = true }
console-subscriber = { version = "0.1.9", optional = true }
bytes = "1.4.0"


[dev-dependencies]
ctor = "0.2.2"
pretty_assertions = "1.3.0"

[features]
tracing = ["dep:tokio-console", "dep:console-subscriber", "tokio/tracing"]
