[package]
name = "opendal-mount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
anyhow = "1.0.79"

log = "0.4.20"
pretty_env_logger = "0.5.0"


opendal = { version = "0.45.0", features = ["services-sftp"] }
nfsserve = { git = "https://github.com/xetdata/nfsserve", branch = "main" }

bimap = "0.6.3"

futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
    "time",
    "sync",
    "net",
] }

tokio-console = { version = "0.1.10", optional = true }
console-subscriber = { version = "0.2.0", optional = true }
bytes = "1.5.0"
clap = { version = "4.4.18", features = [
    "derive",
    "color",
    "usage",
    "help",
    "suggestions",
] }
async-graphql = "7.0.1"
async-graphql-axum = "7.0.1"
axum = "0.7.4"
uuid = { version = "1.7.0", features = ["v4"] }


[dev-dependencies]
ctor = "0.2.6"
pretty_assertions = "1.4.0"
tempfile = "3.9.0"

[features]
default = ["tracing"]
tracing = ["dep:tokio-console", "dep:console-subscriber", "tokio/tracing"]
