[package]
name = "opendal-mount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.8.4"
anyhow = "1.0.86"

log = "0.4.22"

opendal = { version = "0.48", features = ["services-sftp", "services-fs"] }
nfsserve = { version = "0.10.1", path = "../nfsserve" }

bimap = "0.6.3"

futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
    "time",
    "sync",
    "net",
] }

console-subscriber = { version = "0.3.0", optional = true }
bytes = "1.6.0"
clap = { version = "4.5.8", features = [
    "derive",
    "color",
    "usage",
    "help",
    "suggestions",
] }
uuid = { version = "1.9.1", features = ["v4"] }
intaglio = "1.9.1"
tokio-util = "0.7.11"
tokio-console = "0.1.12"


[dev-dependencies]
ctor = "0.2.8"
pretty_assertions = "1.4.0"
tempfile = "3.10.1"

[features]
default = ["tracing"]
tracing = ["dep:console-subscriber", "tokio/tracing"]
